new-vector-tests.user.css
/* ==UserStyle==
@name        Wikim V.2022 tests
@namespace   StylishThemes
@version     1.0.32
@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-tests.user.css
@license     CC-BY-SA-4.0
@author      quiddity-wp and eccenux
==/UserStyle== */
@-moz-document domain("wikipedia.org"),
domain("meta.wikimedia.org"),
domain("office.wikimedia.org"),
domain("commons.wikimedia.org"),
domain("species.wikimedia.org"),
domain("outreach.wikimedia.org"),
domain("wikimania.wikimedia.org"),
domain("foundation.wikimedia.org"),
domain("wikitech.wikimedia.org"),
domain("wiktionary.org"),
domain("mediawiki.org"),
domain("wikisource.org"),
domain("wikivoyage.org"),
domain("wikibooks.org"),
domain("wikinews.org"),
domain("wikiversity.org"),
domain("wikiquote.org"),
domain("wikidata.org"),
domain("beta.wmflabs.org"),
domain("wikifunctions.org") {
/* NOTE: this assumes you are using my Whitespace CSS, and using Left-to-Right languages in NEW VECTOR ([[mw:Desktop Improvements]] beta) */

/* Hide the custom page-toolbar from my Whitespace CSS */
.vector-sticky-header-end {
  display: none !important;
}

/* Use the default page-toolbar as the sticky toolbar */  
#right-navigation {
  position: fixed !important;
  right: 10px;
  top: 35px;
  max-height: 20px;
  background-color: white;
  z-index: 100 !important;
}

.mw-header {
  border-bottom: 1px solid #b9bec4 !important;
}
/* Compact it */
.vector-page-toolbar-container {
  font-size: 0.8em
}
.vector-page-tools-landmark, .vector-menu-dropdown-noicon, #p-page, #p-user {
  margin-top: -3px !important;
}
.mw-ui-icon-small.mw-ui-icon-element {
  padding: 0;
}

/* Nudge both bars upwards */
nav.vector-user-links {
  margin-top: -20px;
}
.mw-page-container {
  z-index: unset !important;
}
/* Fix contribs link which got misaligned */
#pt-contribs {
  margin-top: -5px !important;
}
  
/* Show it at thinner windows */
@media screen and (min-width: 500px) {
  .vector-page-toolbar-container .mw-portlet-views:not(.emptyPortlet) {
    display: block;
  }
}

/* Replace toolbar text with icons */
#ca-addsection {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 10px;
  font-size: 1px;
  color: white;
  text-decoration: none;  
}

#ca-view {
  display: none;
}

#ca-view-foreign > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original)  no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px;
  background-color: #26ae45;
  padding: 10px;
  width: 10px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-ve-edit > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-edit > a {
  -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px 10px;
  width: 15px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-viewsource > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-history > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}

#ca-wikilove {
  padding: 0 5px 0 0;
}

/* Reduce gaps between icons */
.vector-menu-content-list > li {
  margin: 0 5px !important;
}

/* Reduce visibility of languages button ... and nudge it downwards */
.mw-ui-icon-wikimedia-language-progressive, #p-lang-btn-label > .vector-menu-heading-label {
  opacity: 0.6 !important;
}
#p-lang-btn {
  top: 0.5em;
}
  

/* OLD, from when it moved the page/talk links and made icons, when it was using the entire .vector-page-toolbar instead of #right-navigation:

#ca-nstab-main > a, #ca-nstab-user > a, #ca-nstab-media > a, #ca-nstab-special > a, #ca-nstab-project > a, #ca-nstab-image > a, #ca-nstab-mediawiki > a, #ca-nstab-template > a, #ca-nstab-help > a, #ca-nstab-category > a, #ca-nstab-manual > a, #ca-nstab-extension > a, #ca-nstab-module > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=article&format=original) no-repeat 0 0/20px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=article&format=original) no-repeat 0 0/20px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-nstab-main.new > a, #ca-nstab-user.new > a, #ca-nstab-media.new > a, #ca-nstab-project.new > a, #ca-nstab-image.new > a, #ca-nstab-mediawiki.new > a, #ca-nstab-template.new > a, #ca-nstab-help.new > a, #ca-nstab-category.new > a, #ca-nstab-manual.new > a, #ca-nstab-extension.new > a, #ca-nstab-module.new > a {
  background-color: #f4b8b8 !important;
}
  
#ca-talk > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-moderation&image=ongoingConversation&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-moderation&image=ongoingConversation&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-talk.empty a {
  background-color: #ffcf9f !important;
}
#ca-talk.new a {
  background-color: #f4b8b8 !important;
}
*/

}

